--- a/Infra.IoC/Infra.IoC.csproj
+++ b/Infra.IoC/Infra.IoC.csproj
@@ -9,6 +9,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Domain\Domain.Core\Domain.Core.csproj" />
+    <ProjectReference Include="..\Infra.Bus\MessageBroker.Infra.Bus\MessageBroker.Infra.Bus.csproj" />
     <ProjectReference Include="..\LoggerService\LoggerService.csproj" />
   </ItemGroup>
 
