--- a/Infra.IoC/Infra.IoC.csproj
+++ b/Infra.IoC/Infra.IoC.csproj
@@ -5,12 +5,13 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="3.1.8" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="3.1.9" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Domain\Domain.Core\Domain.Core.csproj" />
     <ProjectReference Include="..\Infra.Bus\MessageBroker.Infra.Bus\MessageBroker.Infra.Bus.csproj" />
+    <ProjectReference Include="..\Inventory.Data\Inventory.Data.csproj" />
     <ProjectReference Include="..\LoggerService\LoggerService.csproj" />
   </ItemGroup>
 
